# psp-audit

./: .gitignore  AGENTS_TODO.md  CHANGELOG.md  MANIFEST.sha256  README.md  SYSTEM_CONTRACT.md  audit.json  bootstrap_psp.py  next-js-report.md  pyproject.toml  vscode-report.md
.github/workflows/: canon-gate.yml
docs/: founder-brief.md  github-app-permissions.md  incident-report-template.md  landing-page-message-architecture.md  oracle-handoff.md  psp_cli_contract.md  psp_github_app_permissions.md  psp_handoff.md  psp_incident_report_layout.md  psp_landing_page_block.md  psp_risk_baseline.md  psp_snapshot_workflow.md  verdict-card-copy.md
examples/: linux-audit.json  nextjs-audit.json  nextjs-report.md  vscode-audit.json
exports/: nextjs-envelope.json  nextjs-report.md  nextjs-report.txt  nextjs-webhook.json  vscode-envelope.json  vscode-report.md  vscode-report.txt  vscode-webhook.json
payloads/: audit_example.json  incident_report_example.json  snapshot_model.json
schemas/: audit.schema.json  incident-report.schema.json  risk-envelope.v2.schema.json  verdict-card.schema.json
scripts/: build_export_bundle.sh  canon_gate.py
src/psp/: github_client.py
src/psp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/psp/cli/: __init__.py  audit.py  report.py
src/psp/incident/: schema.json
src/psp/judgment/: envelope.py
src/psp/landing/: page.html  styles.css
src/psp/renderers/: report.py
src/psp/risk/: engine.py  schema.json
test/: test_incident_report.py  test_psp_cli.py  test_risk_baseline.py
